# gpm

./: .cmake-format.yaml  .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml
cmake/: CompilerSettings.cmake  FindClangFormat.cmake  clang7-libcxx.cmake
docs/: README.md  index.html
docs/ani/: antTree.xcf
docs/olddocs/: README.md
docs/presentation/: index.html
docs/presentation/reveal.js-3.7.0/: index.html
examples/: CMakeLists.txt
examples/ant/: CMakeLists.txt  ant_board_simulation.hpp  ant_board_visualization.cpp  ant_genetic_programming_main.cpp  ant_sandbox.cpp  ant_simulation.hpp  ant_simulation_benchmark.cpp  ant_simulation_common.hpp  ant_simulation_generate.cpp  artificial_ant_main.cpp  benchmark_main.cpp  extern_defined_ants.cpp  extern_defined_ants.h  generate_main.cpp  generate_tree_for_benchmark_main.cpp  nodes.hpp  nodes_dyno.hpp  nodes_funcptr.hpp  nodes_funcptr2.hpp  nodes_hana_tuple.hpp  nodes_implicit_tree.hpp  nodes_opp.hpp  nodes_tuple.hpp  santa_fe_board.hpp  santa_fe_board.txt  static_vs_dynamic_ant.cpp  tree_benchmark_main.cpp
examples/ant/code_generators/: dyno_tree_ctstatic.hpp  dyno_tree_dynamic.hpp  funcptr2_dynamic.hpp  funcptr_dynamic.hpp  implicit_tree_dynamic.hpp  oop_tree_dynamic.hpp  opp_tree_ctstatic.hpp  tuple_ctstatic.hpp  unwrapped_direct_ctstatic.hpp  unwrapped_visitorcalling_ctstatic.hpp  variant_dynamic.hpp  variant_dynamic2.hpp  viarant_ctstatic.hpp
examples/ant/common/: ant_board_simulation.hpp  ant_simulation.hpp  nodes.hpp  santa_fe_board.hpp  visitor.hpp
examples/ant/data/: optAnt.txt  optAntPN.txt  randomAnt.txt
examples/ant/tests/: CMakeLists.txt  artificial_ant_tests.cpp
examples/datastore/: staticdatastore.h  staticdatastore_main.cpp
include/gpm/: .gpm.hpp.kate-swp  factories.hpp  generators.hpp  gpm.hpp  io.hpp  nodes.hpp  tree_utils.hpp
include/gpm/utils/: fmtutils.hpp
sketch/: CMakeLists.txt  ant_simulation_benchmark_generated_functions.cpp  dynoexample.cpp  fasterfactories.cpp  hanatupletree.cpp  iterators_and_ranges.cpp  mapfmt.cpp  mybenchmark.cpp  objectpool.cpp
sketch/datastore/: CMakeLists.txt  staticdatastore.h  staticdatastore_main.cpp  staticdatastoreaccesscontrol.h
tools/: ant.html  make-benchmark-builds.py  view_bechmark_plots.py
tools/benchmark/: clang++-6.0-ASAN-tree_benchmark.json  clang++-6.0-USAN-tree_benchmark.json  clang++-6.0-tree_benchmark.json  clang++-7-ASAN-buildtime_None.txt  clang++-7-ASAN-buildtime_dynoTreeCTStatic.txt  clang++-7-ASAN-buildtime_dynoTreeDynamic.txt  clang++-7-ASAN-buildtime_oopTreeDynamic.txt  clang++-7-ASAN-buildtime_oppTreeCTStatic.txt  clang++-7-ASAN-buildtime_tupleCTStatic.txt  clang++-7-ASAN-buildtime_unwrappedDirectCTStatic.txt  clang++-7-ASAN-buildtime_unwrappedVisitorCallingCTStatic.txt  clang++-7-ASAN-buildtime_variantCTStatic.txt  clang++-7-ASAN-buildtime_variantDynamic.txt  clang++-7-ASAN-tree_benchmark.json  clang++-7-USAN-buildtime_None.txt  clang++-7-USAN-buildtime_dynoTreeCTStatic.txt  clang++-7-USAN-buildtime_dynoTreeDynamic.txt  clang++-7-USAN-buildtime_oopTreeDynamic.txt  clang++-7-USAN-buildtime_oppTreeCTStatic.txt  clang++-7-USAN-buildtime_tupleCTStatic.txt  clang++-7-USAN-buildtime_unwrappedDirectCTStatic.txt  clang++-7-USAN-buildtime_unwrappedVisitorCallingCTStatic.txt  clang++-7-USAN-buildtime_variantCTStatic.txt  clang++-7-USAN-buildtime_variantDynamic.txt  clang++-7-USAN-tree_benchmark.json  clang++-7-buildtime_None.txt  clang++-7-buildtime_dynoTreeCTStatic.txt  clang++-7-buildtime_dynoTreeDynamic.txt  clang++-7-buildtime_oopTreeDynamic.txt  clang++-7-buildtime_oppTreeCTStatic.txt  clang++-7-buildtime_tupleCTStatic.txt  clang++-7-buildtime_unwrappedDirectCTStatic.txt  clang++-7-buildtime_unwrappedVisitorCallingCTStatic.txt  clang++-7-buildtime_variantCTStatic.txt  clang++-7-buildtime_variantDynamic.txt  clang++-7-create-tree_benchmark.json  clang++-7-full-tree_benchmark.json  clang++-7-minsize-tree_benchmark.json  clang++-7-tree_benchmark.json  g++-7-tree_benchmark.json  (+14 more)
tools/ci/: gdbinit.script  install-gcc.sh
tools/emscripten-docker/: Dockerfile
